# App-Canvas---Rock-Paper-Scissors

./: .gitignore  Add 2 numbers.py  App Canvas v1.py  AppCanvasv1.py  Benchling Integration 1 - Lambda example.py  Benchling_SDK_Example.py  DEPENDENCY_MANAGEMENT.md  Dictionary Test.py  ETL_Jupyter.ipynb  Example Excel Python Compiled Names.txt  Exercise 1 - PracticePython.py  Exercise 2 - PracticePython.py  Exercise 5.py  Exercise 6.py  Exercise 7.py  Exercise 8.py  Exercise 9.py  Leetcode exercise.py  ManifestVersion1.yaml  Palindrome.py  PandasTutorials.py  Pangram.py  Parsing PDFs.py  Python Shell.py  README.md  Test2.py  Tetra Coding Example.py  Tetra Example.py  Titanic.ipynb  Two-Sum.py  Untitled-1.py  etl.py  import subprocess.py  my_lite_store.db  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
scripts/: generate_pyproject_poetry.py  generate_requirements_in.py
