[tool.poetry]
name = "app-canvas-rock-paper-scissors"
version = "0.1.0"
description = "Benchling App Canvas: Rock-Paper-Scissors (FastAPI)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
"fastapi" = "*"
"httpx" = "*"
"pydantic" = "*"
"python-dotenv" = "*"
"requests" = "*"
"uvicorn" = "*"

[tool.poetry.dev-dependencies]
# All other top-level packages from requirements.in are listed here as dev deps
"Babel" = "*"
"CacheControl" = "*"
"Faker" = "*"
"GitPython" = "*"
"Jinja2" = "*"
"MarkupSafe" = "*"
"PyYAML" = "*"
"Pygments" = "*"
"QtPy" = "*"
"SQLAlchemy" = "*"
"Send2Trash" = "*"
"annotated-types" = "*"
"anyio" = "*"
"argon2-cffi" = "*"
"argon2-cffi-bindings" = "*"
"arrow" = "*"
"asttokens" = "*"
"async-lru" = "*"
"attrs" = "*"
"backoff" = "*"
"beautifulsoup4" = "*"
"benchling-api-client" = "*"
"benchling-sdk" = "*"
"bleach" = "*"
"boto3" = "*"
"botocore" = "*"
"build" = "*"
"cattrs" = "*"
"certifi" = "*"
"cffi" = "*"
"charset-normalizer" = "*"
"cleo" = "*"
"click" = "*"
"colorama" = "*"
"comm" = "*"
"crashtest" = "*"
"cryptography" = "*"
"dataclasses-json" = "*"
"debugpy" = "*"
"decorator" = "*"
"deepdiff" = "*"
"defusedxml" = "*"
"distlib" = "*"
"dulwich" = "*"
"executing" = "*"
"fastjsonschema" = "*"
"filelock" = "*"
"fqdn" = "*"
"gitdb" = "*"
"greenlet" = "*"
"h11" = "*"
"httpcore" = "*"
"idna" = "*"
"installer" = "*"
"ipykernel" = "*"
"ipython" = "*"
"ipywidgets" = "*"
"isoduration" = "*"
"jaraco.classes" = "*"
"jedi" = "*"
"jmespath" = "*"
"json5" = "*"
"jsonpointer" = "*"
"jsonref" = "*"
"jsonschema" = "*"
"jsonschema-specifications" = "*"
"jupyter" = "*"
"jupyter-console" = "*"
"jupyter-events" = "*"
"jupyter-lsp" = "*"
"jupyter_client" = "*"
"jupyter_core" = "*"
"jupyter_server" = "*"
"jupyter_server_terminals" = "*"
"jupyterlab" = "*"
"jupyterlab_pygments" = "*"
"jupyterlab_server" = "*"
"jupyterlab_widgets" = "*"
"jwcrypto" = "*"
"keyring" = "*"
"loguru" = "*"
"markdown-it-py" = "*"
"marshmallow" = "*"
"matplotlib-inline" = "*"
"mdurl" = "*"
"mistune" = "*"
"more-itertools" = "*"
"msgpack" = "*"
"mypy-extensions" = "*"
"nbclient" = "*"
"nbconvert" = "*"
"nbformat" = "*"
"nest-asyncio" = "*"
"notebook" = "*"
"notebook_shim" = "*"
"numpy" = "*"
"ordered-set" = "*"
"overrides" = "*"
"packaging" = "*"
"pandas" = "*"
"pandocfilters" = "*"
"parso" = "*"
"pexpect" = "*"
"pkginfo" = "*"
"platformdirs" = "*"
"poetry" = "*"
"poetry-core" = "*"
"poetry-plugin-export" = "*"
"prometheus_client" = "*"
"prompt_toolkit" = "*"
"psutil" = "*"
"ptyprocess" = "*"
"pure_eval" = "*"
"pyarrow" = "*"
"pycparser" = "*"
"pydantic_core" = "*"
"pydash" = "*"
"pyproject_hooks" = "*"
"python-dateutil" = "*"
"python-json-logger" = "*"
"pytz" = "*"
"pywin32" = "*"
"pywin32-ctypes" = "*"
"pywinpty" = "*"
"pyzmq" = "*"
"qtconsole" = "*"
"rapidfuzz" = "*"
"referencing" = "*"
"requests-cache" = "*"
"requests-toolbelt" = "*"
"rfc3339-validator" = "*"
"rfc3986-validator" = "*"
"rich" = "*"
"rpds-py" = "*"
"s3transfer" = "*"
"semver" = "*"
"setuptools" = "*"
"shellingham" = "*"
"simplejson" = "*"
"six" = "*"
"smart-open" = "*"
"smmap" = "*"
"sniffio" = "*"
"soupsieve" = "*"
"stack-data" = "*"
"starlette" = "*"
"tenacity" = "*"
"terminado" = "*"
"tinycss2" = "*"
"tomlkit" = "*"
"tornado" = "*"
"traitlets" = "*"
"trove-classifiers" = "*"
"ts-ids-validator" = "*"
"ts-sdk" = "*"
"types-python-dateutil" = "*"
"typing-inspect" = "*"
"typing-inspection" = "*"
"typing_extensions" = "*"
"tzdata" = "*"
"uri-template" = "*"
"url-normalize" = "*"
"urllib3" = "*"
"virtualenv" = "*"
"wcwidth" = "*"
"webcolors" = "*"
"webencodings" = "*"
"websocket-client" = "*"
"wheel" = "*"
"widgetsnbextension" = "*"
"win32-setctime" = "*"
"annotated-doc" = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"